add imagination & update visualization notebooks

--- a/RAE/notebooks/clip_unclip_reconstruction.ipynb
+++ b/RAE/notebooks/clip_unclip_reconstruction.ipynb
@@ -107,8 +107,8 @@
     "batch_size = 32\n",
     "num_workers = 4\n",
     "corrupt_range = (0.50, 0.70)\n",
-    "max_train = 512\n",
-    "max_val = 128\n",
+    "max_train = None\n",
+    "max_val = None\n",
     "num_visualize = 4\n",
     "\n",
     "restore_cfg.hidden_dims = 1024\n",
