--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -22,15 +22,41 @@
     "    print(\" \".join(cmd))\n",
     "    subprocess.check_call(cmd)\n",
     "\n",
+    "def install_torch(torch_index: str):\n",
+    "    base_pkgs = [\n",
+    "        \"numpy<2\",\n",
+    "        \"torch==2.4.1\",\n",
+    "        \"torchvision==0.19.1\",\n",
+    "        \"torchaudio==2.4.1\",\n",
+    "        \"diffusers\",\n",
+    "        \"transformers\",\n",
+    "        \"fastai>=2.7.16\",\n",
+    "        \"omegaconf\",\n",
+    "        \"git+https://github.com/ml-jku/hopfield-layers.git\",\n",
+    "        \"timm\",\n",
+    "        \"tqdm\",\n",
+    "    ]\n",
+    "    cmd = [\n",
+    "        sys.executable, \"-m\", \"pip\", \"install\", \"-q\", \"--upgrade\", \"--force-reinstall\",\n",
+    "        \"--extra-index-url\", torch_index,\n",
+    "        *base_pkgs,\n",
+    "    ]\n",
+    "    run(cmd)\n",
+    "\n",
+    "def install_pillow():\n",
+    "    run([sys.executable, \"-m\", \"pip\", \"install\", \"-q\", \"--upgrade\", \"--force-reinstall\", \"pillow==12.0.0\"])\n",
+    "\n",
     "# Install requirements if missing (common on Colab)\n",
     "# Colab ships numpy>=2 which is ABI-incompatible with these torch wheels; pin to <2.\n",
     "if \"google.colab\" in sys.modules:\n",
-    "    run([sys.executable, \"-m\", \"pip\", \"install\", \"-q\", \"--upgrade\", \"--force-reinstall\",\n",
-    "         \"numpy<2\",\n",
-    "         \"torch==2.4.1\", \"torchvision==0.19.1\", \"torchaudio==2.4.1\",\n",
-    "         \"--index-url\", \"https://download.pytorch.org/whl/cu121\",\n",
-    "         \"diffusers\", \"transformers\", \"fastai>=2.7.16\", \"omegaconf\",\n",
-    "         \"git+https://github.com/ml-jku/hopfield-layers.git\", \"timm\", \"tqdm\"])\n",
+    "    try:\n",
+    "        install_torch(\"https://download.pytorch.org/whl/cu121\")\n",
+    "    except subprocess.CalledProcessError:\n",
+    "        print(\"CUDA wheels unavailable; retrying CPU wheels.\")\n",
+    "        install_torch(\"https://download.pytorch.org/whl/cpu\")\n",
+    "    install_pillow()\n",
+    "    import PIL\n",
+    "    print(\"Pillow version:\", PIL.__version__)\n",
     "\n",
     "# Clone repo if src/ is absent\n",
     "REPO_URL = os.environ.get(\"REPO_URL\", \"https://github.com/aletheia88/dream-with-embeddings\")\n",
@@ -40,7 +66,6 @@
     "repo_candidates = [Path.cwd(), default_repo_dir]\n",
     "REPO_DIR = next((p for p in repo_candidates if (p / \"src\").exists()), default_repo_dir)\n",
     "if not (REPO_DIR / \"src\").exists():\n",
-    "    REPO_DIR.parent.mkdir(parents=True, exist_ok=True)\n",
     "    run([\"git\", \"clone\", REPO_URL, str(REPO_DIR)])\n",
     "\n",
     "os.chdir(REPO_DIR)\n",
